scripts: removed unnecessary spacing and added #search failsafe on resize(), main: small padding fix, gulp: changed default output route, HTML's: removed unnecessary spacing

--- a/scss_styles/scss/_main.scss
+++ b/scss_styles/scss/_main.scss
@@ -176,7 +176,7 @@ iframe {
   border: none!important;
 }
 .skiptranslate {
-  padding: 0 20px!important;
+  padding: 0!important;
 }
 .goog-te-menu-value {
   span {
